# solvatochrome

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/solvatochrome/: __init__.py
tests/: test_smoke.py
